# services/hotel/internal/handlers/hotel.go
@@ -26,7 +26,7 @@ func NewHotelHandler(hotelService *services.HotelService) *HotelHandler {
 // @Produce      json
 // @Success		 200 {object} domain.Hotel
 // @Param        id   path      int  true  "Hotel ID"
-// @Router       /hotels/hotel/{id} [get]
+// @Router       /hotels/{id} [get]
 func (h *HotelHandler) GetHotelById(c *gin.Context) {
 	id, _ := strconv.ParseInt(c.Param("id"), 10, 64)
 	hotel, err := h.hotelService.GetHotelById(id)
@@ -69,4 +69,60 @@ func (h *HotelHandler) GetHotels(c *gin.Context) {
 	} else {
 		c.JSON(http.StatusOK, hotels)
 	}
+}
+
+// CreateHotel
+// @Summary      Add new hotel
+// @Description  Add new hotel
+// @Tags         Admin
+// @Accept       json
+// @Produce      json
+// @Success		 201 {object} domain.Hotel
+// @Param        request body domain.CreateHotelRequest true "Hotel data"
+// @Router       /hotels/create [post]
+func (h *HotelHandler) CreateHotel(c *gin.Context) {
+	var hotel domain.CreateHotelRequest
+
+	if err := c.ShouldBindJSON(&hotel); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	id, err := h.hotelService.Create(hotel)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"id": id})
+}
+
+// UpdateHotel
+// @Summary      Update hotel information
+// @Description  Update hotel information
+// @Tags         Admin
+// @Accept       json
+// @Produce      json
+// @Success		 200 {object} string
+// @Param        id path int true "Hotel ID"
+// @Param        request body domain.CreateHotelRequest true "Hotel data"
+// @Router       /hotels/update/{id} [put]
+func (h *HotelHandler) UpdateHotel(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	}
+
+	var hotel domain.CreateHotelRequest
+
+	if err = c.ShouldBindJSON(&hotel); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	err = h.hotelService.Update(domain.ID(id), hotel)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	c.JSON(http.StatusOK, gin.H{"status": "ok"})
 }
